addons/player-thumb/userstyle.css
.sa-project-thumb {
  display: inline;
  position: absolute;
  background-color: var(--darkWww-page, #fcfcfc);
}

.sa-body-editor .sa-project-thumb {
  display: none;
}

.sa-controls-disabled > img {
  pointer-events: none;
  opacity: 0.5;
}

body:not(.sa-body-editor) .sa-project-thumb {
  top: 1px;
  left: 1px;
  width: calc(100% - 2px);
  height: calc(100% - 2px);
  border-radius: calc(0.5rem - 1px);
}

body:not(.sa-body-editor) div[class*="loader_background_"] {
  border-radius: calc(0.5rem - 1px);
}

body:not(.sa-body-editor) div[class*="loader_background_"],
body:not(.sa-body-editor) .sa-project-thumb.loading {
  top: calc(2.75rem + 1px);
  height: calc(100% - 2.75rem - 2px);
}

[class*="stage-wrapper_full-screen"] .sa-project-thumb {
  top: 3px;
  left: 3px;
  height: calc(100% - 6px);
  border-radius: calc(0.5rem - 3px);
}

[class*="stage-wrapper_full-screen"] .sa-project-thumb.loading {
  top: 6px;
  left: auto;
  height: min(100% - 12px, 100vw * 0.75);
}

[class*="stage-wrapper_full-screen"] div[class*="loader_background_"] {
  top: calc(2.75rem + 6px);
  left: auto;
  width: auto;
  height: min(100% - 2.75rem - 12px, 100vw * 0.75);
  aspect-ratio: 4 / 3;
}

[class*="stage-wrapper_full-screen"] [class*="loader_block-animation_"],
body:not(.sa-body-editor) [class*="loader_block-animation_"] {
  /* Remove transparency */
  filter: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg'><filter id='opaque'><feComponentTransfer><feFuncA type='linear' slope='3.5'></feFuncA></feComponentTransfer></filter></svg>#opaque");
}

